--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fontsource/aladin": "^5.1.0",
     "@fontsource/andada-pro": "^5.1.1",
     "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^6.1.3",
