--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
+    "@react-three/drei": "^9.117.2",
+    "@react-three/fiber": "^8.17.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "three": "^0.170.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
